# doctor-ai-infra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_GUIDE.md  CONTRIBUTING.md  DESIGN.md  DOCS.md  Dockerfile  GEMINI.md  MIGRATION.md  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  backend_log.txt  check_warning.py  frontend_log.txt  nginx.conf  sre_agent.db  supervisord.conf
ISSUE_TEMPLATE/: bug_report.md
backend/: .coverage  .gitignore  README.md  cli.py  conftest.py  main.py  pyproject.toml  requirements.txt
backend/app/: db.py  graph.py  llm.py  main.py  rag.py  state.py
backend/app/agents/: __init__.py  supervisor.py  utils.py
backend/app/tools/: __init__.py  azion.py  bits_ai.py  chaos.py  ci.py  code.py  cost.py  dashboard.py  finops.py  fuzzylabs.py  gcp_optimizer.py  incident.py  incidentfox.py  k8s_optimizer.py  knowledge.py  mocks.py  observability.py  opsmate.py  opsy.py  real.py  reasoning.py  runbooks.py  smythos.py  traefik.py  visualizer.py
backend/tests/: conftest.py  test_2026_features.py  test_additional_coverage.py  test_advanced_features.py  test_agent_manager.py  test_api.py  test_async_graph.py  test_azion.py  test_best_of_2026.py  test_ci_sdk.py  test_cli_interaction.py  test_code_tools.py  test_cost.py  test_dashboard.py  test_full_workflow.py  test_gcp_errors.py  test_google_genai_sdk.py  test_google_migration.py  test_graph_flow.py  test_graph_transitions.py  test_hypothesis_tool.py  test_imports.py  test_incident_fallback.py  test_incident_genai.py  test_incident_management.py  test_integrated_agents.py  test_k8s_troubleshoot.py  test_langgraph_edge_cases.py  test_langgraph_extra.py  test_langgraph_full_troubleshoot.py  test_langgraph_migration.py  test_log_analysis.py  test_observability_fallback.py  test_opsy_fuzzylabs.py  test_optimization.py  test_persistence.py  test_planner_logic.py  test_rag_system.py  test_real.py  test_real_trace.py  (+9 more)
backend/verification/: test_enhanced_features.py  verify_new_features.py  verify_new_tools.py  verify_streaming.py
chroma_db/: chroma.sqlite3
(+52 files in other folders)
