[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-generativeai==0.3.2",
    "langchain==0.1.10",
    "langchain-community==0.0.38",
    "langchain-core==0.1.53",
    "langchain-google-genai==0.0.9",
    "langchain-openai==0.0.8",
    "langchain-text-splitters==0.0.2",
    "langgraph==0.0.26",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
