[project]
name = "backend"
version = "0.1.0"
description = "Infra Agent Manager Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.5.0",
    "langchain-google-genai>=1.0.0",
    "langchain-text-splitters>=0.2.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
