[project]
name = "backend"
version = "0.1.0"
description = "Infra Agent Manager Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.2.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "kubernetes>=29.0.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-monitoring>=2.14.0",
    "datadog-api-client>=2.25.0",
    "requests>=2.31.0",
    "chromadb>=0.4.24",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.2.0",
]
